--- a/look.kv
+++ b/look.kv
@@ -6,6 +6,8 @@ Logic:
             size_hint: [1, .8]
             Graph:
                 id: graph
+                xlabel: ""
+                ylabel: "Level"
         BoxLayout:
             size_hint: [1, .2]
             orientation: "horizontal"
